--- a/src/features/home/needed-features/style.css
+++ b/src/features/home/needed-features/style.css
@@ -85,93 +85,130 @@
 }
 
 @media only screen and (max-width: 1441px) {
+  .slide-title {
+    font-size: 70px;
+  }
+
+  .slide-content-title {
+    padding-top: 157px;
+  }
+
   .slide-video {
     justify-content: center;
+  }
+
+  .video1 {
+    width: 466px;
+    padding-left: 10px;
+  }
+
+  .video2 {
+    width: 415px;
+    padding-left: 10px;
+  }
+
+  .arrowNext {
+    width: 50px;
+  }
+
+  .slide-content {
+    max-width: 1059px;
+    padding-top: 92px;
+  }
+
+  .NeededFeatures-content-paragraph li {
+    font-size: 20px;
+    line-height: 20px;
+  }
+}
+
+@media only screen and (max-width: 1281px) {
+  .NeededFeatures-container {
+    /* max-width: 1015px;
+    margin: auto; */
+  }
+
+  .NeededFeatures-content {
+    /* padding: 0 16px;
+    margin: 0 -16px; */
+  }
+
+  .slide-title {
+    font-size: 60px;
+    padding-bottom: 0;
+  }
+
+  .slide-content-title {
+    padding-top: 115px;
   }
 
   .video1 {
     width: 400px;
     padding-left: 10px;
-
   }
-
   .video2 {
-    width: 300px;
+    width: 354px;
     padding-left: 10px;
   }
 
   .arrowNext {
     width: 40px;
-  }
-
-  .slide-content {
-    padding-top: 70px;
-    padding-left: 190px;
-  }
-}
-
-@media only screen and (max-width: 1281px) {
-
-  .slide-title {
-    font-size: 60px;
-  }
-  .slide-content-title {
-    padding-top: 139px;
-  }
-
-  .video2 {
-    width: 365px;
-    height: 203px;
-  }
-  .NeededFeatures-content-paragraph li {
-    font-size: 24px;
-    line-height: normal;
-    padding-bottom: 20px;
-  }
-  .video1 {
-    width: 365px;
-    height: 203px;
-  }
-}
-
-@media only screen and (max-width: 1025px) {
-  .slide-content-title {
-    padding-top: 88px;
-  }
-
-  .slide-title {
-    font-size: 50px;
-  }
-
-  .video1 {
-    width: 330px;
-  }
-
-  .video2 {
-    width: 260px;
-    padding-left: 10px;
   }
 
   .slide-video {
-    justify-content: center;
-  }
-
-  .arrowNext {
-    width: 40px;
+    justify-content: space-evenly;
+    max-width: 900px;
+    margin: auto;
+    padding-left: 0;
+    padding-top: 16px;
   }
 
   .slide-content {
-    padding-top: 50px;
-    padding-left: 75px;
+    max-width: 880px;
+    padding-top: 167px;
+  }
+
+  .NeededFeatures-content-paragraph {
+    max-width: none;
+    padding: 0 16px;
+    margin: 0 -16px;
   }
 
   .NeededFeatures-content-paragraph li {
     font-size: 20px;
-    padding-bottom: 16px;
+    line-height: 20px;
+    padding-bottom: 33px;
+  }
+}
+
+@media only screen and (max-width: 1025px) {
+  .slide-title {
+    font-size: 40px;
+  }
+  .slide-content-title {
+    padding-top: 73px;
   }
 
-  .NeededFeatures-content-paragraph {
-    max-width: 800px;
+  .video1 {
+    width: 350px;
+  }
+
+  .video2 {
+    width: 310px;
+  }
+
+  .slide-video {
+    max-width: 737px;
+  }
+
+  .slide-content {
+    max-width: 720px;
+    padding-top: 114px;
+  }
+
+  .NeededFeatures-content-paragraph li {
+    font-size: 16px;
+    line-height: 10px;
   }
 }
 
@@ -185,14 +222,15 @@
     padding-top: 44px;
   }
   .video1 {
-    width: 200px;
+    width: 250px;
+    padding-left: 10px;
   }
   .video2 {
-    width: 173px;
+    width: 220px;
     padding-left: 10px;
   }
   .arrowNext {
-    width: 20px;
+    width: 30px;
   }
   .slide-video {
     justify-content: center;
@@ -203,13 +241,13 @@
   }
 
   .NeededFeatures-content-paragraph {
-    padding-top: 115px;
-    padding-left: 90px;
+    padding-top: 93px;
+    padding-left: 115px;
     max-width: 700px;
   }
 
   .NeededFeatures-content-paragraph li {
-    font-size: 20px;
+    font-size: 16px;
     line-height: normal;
     padding-bottom: 16px;
   }
@@ -220,8 +258,9 @@
     padding: 0;
   }
   .slide-title {
-    font-size: 24px;
+    font-size: 20px;
     padding: 0;
+    height: 70px;
   }
   .video1 {
     width: 170px;
@@ -241,18 +280,19 @@
   }
 
   .NeededFeatures-content-paragraph {
-    padding-top: 10px;
+    padding-top: 42px;
+    max-width: 400px;
+    padding-left: 92px;
   }
 
   .NeededFeatures-content-paragraph li {
     font-size: 10px;
     line-height: normal;
     padding-bottom: 10px;
-    padding-left: 50px;
   }
 }
 @media only screen and (max-width: 415px) {
-  .slide-content-title {
+  /* .slide-content-title {
     padding: 0;
   }
   .slide-title {
@@ -285,5 +325,5 @@
     line-height: normal;
     padding-bottom: 10px;
     padding-left: 50px;
-  }
+  } */
 }
