--- a/src/conponents/box/style.css
+++ b/src/conponents/box/style.css
@@ -10,18 +10,39 @@
   height: 69px;
 }
 
+@media only screen and (max-width: 1441px) {
+  .base-div {
+    width: 20px;
+    height: 50px;
+  }
+}
+
 @media only screen and (max-width: 1281px) {
   .base-div {
-    width: 24px;
-    height: 54px;
+    width: 16px;
+    height: 40px;
+  }
+}
+
+@media only screen and (max-width: 1024px) {
+  .base-div {
+    width: 13px;
+    height: 35px;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .base-div {
+    width: 18px;
+    height: 40px;
   }
 }
 
 @media only screen and (max-width: 426px) {
   .base-div {
-    width: 20px;
-    height: 49px;
-  }
+    width: 14px;
+    height: 37px;
+}
 }
 @media only screen and (max-width: 415px) {
   .base-div {
