--- a/src/features/home/introduce/style.css
+++ b/src/features/home/introduce/style.css
@@ -10,8 +10,11 @@
 
 .introduce-content {
   display: flex;
-  padding-top: 62px;
   align-items: flex-end;
+  padding: 0 16px;
+  margin: 0 -16px;
+  padding-top: 62px;
+  justify-content: space-between;
 }
 
 .introduce-content-title1 {
@@ -65,6 +68,11 @@
   color: #ffffff;
 }
 
+.introduce-content-button-right:hover,
+.introduce-content-button-left:hover {
+  box-shadow: 0px 0px 18px 9px rgba(152, 136, 251, 0.66);
+}
+
 .introduce-content-button-right {
   padding: 14px 25px;
   font-family: "Jura";
@@ -73,9 +81,15 @@
   line-height: 31px;
   text-transform: uppercase;
   border: 2px solid #7f5cfc;
+  box-shadow: 0px 0px 23px rgba(152, 136, 251, 0.66);
   border-radius: 5px;
   color: #7f5cfc;
   background: #fff;
+}
+
+.itro-home-button {
+  transition: all 0.5s;
+  position: relative;
 }
 
 @media only screen and (max-width: 1800px) {
@@ -88,117 +102,186 @@
   }
 }
 
+.introduce-content {
+  /* padding: 0 16px; */
+  padding-top: 62px;
+}
+
+.introduce-content-title1 {
+  font-size: 30px;
+}
+
+.introduce-content-title2 {
+  font-size: 60px;
+  line-height: normal;
+  padding-top: 10px;
+  background-color: #000;
+  background-image: url("../../../accsets/img/backgouyndLogo.png");
+  background-repeat: no-repeat;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.introduce-content-paragraph {
+  font-size: 25px;
+  padding: 16px 0;
+}
+
+.introduce-content-button-right {
+  font-size: 20px;
+  padding: 11px 22px;
+}
+
+.introduce-content-button-left {
+  font-size: 20px;
+  padding: 11px 22px;
+  margin-right: 5px;
+}
+
+.slide-content-title {
+  padding-top: 161px;
+}
+
+.slide-title {
+  font-size: 73px;
+}
+
+.introduce-content-title2 {
+  font-size: 53px;
+}
+
 @media only screen and (max-width: 1441px) {
-  .introduce-content {
-    padding: 0 16px;
-    padding-top: 62px;
+  .introduce-container {
+    max-width: 1200px;
   }
 
   .introduce-content-title1 {
-    font-size: 34px;
+    font-size: 30px;
   }
 
   .introduce-content-title2 {
-    font-size: 60px;
-    line-height: normal;
-    padding-top: 10px;
-    background-color: #000;
-    background-image: url("../../../accsets/img/backgouyndLogo.png");
-    background-repeat: no-repeat;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
+    line-height: 88px;
+    font-size: 40px;
   }
 
   .introduce-content-paragraph {
-    font-size: 25px;
-    padding: 16px 0;
-  }
-
-  .introduce-content-button-right {
-    font-size: 20px;
-    padding: 11px 22px;
+    max-width: 500px;
+    font-size: 22px;
   }
 
   .introduce-content-button-left {
-    font-size: 20px;
-    padding: 11px 22px;
-    margin-right: 5px;
+    font-size: 18px;
+    padding: 8px 19px;
   }
-
-  .slide-content-title {
-    padding-top: 161px;
-  }
-
-  .slide-title {
-    font-size: 73px;
-  }
-
-  .introduce-content-title2 {
-    font-size: 53px;
+  .introduce-content-button-right {
+    font-size: 18px;
+    padding: 6px 17px;
   }
 }
 
-@media only screen and (max-width: 1025px) {
+@media only screen and (max-width: 1281px) {
+  .introduce-container {
+    max-width: 1015px;
+  }
+
   .introduce-content {
-    padding: 0 16px;
+  }
+
+  .introduce-content-title1 {
+    font-size: 24px;
+  }
+
+  .introduce-content-title2 {
+    font-size: 35px;
+  }
+
+  .introduce-content-paragraph {
+    max-width: 450px;
+    font-size: 18px;
+  }
+
+  .introduce-content-button-left {
+    font-size: 16px;
+    padding: 6px 17px;
+  }
+
+  .introduce-content-button-right {
+    font-size: 16px;
+    padding: 4px 15px;
+  }
+
+  /* .introduce-container */
+}
+
+@media only screen and (max-width: 1025px) {
+  .introduce-container {
+    max-width: 811px;
+  }
+  .introduce-content {
+    /* padding: 0 16px; */
     padding-top: 62px;
   }
 
   .introduce-content-title2 {
     line-height: normal;
-    font-size: 36px;
+    font-size: 30px;
     padding-top: 10px;
   }
 
-  .introduce-content-paragraph {
+  .introduce-content-title1 {
     font-size: 20px;
+  }
+
+  .introduce-content-paragraph {
+    max-width: 350px;
+    font-size: 16px;
     padding: 16px 0;
   }
 
   .introduce-content-button-right {
-    font-size: 20px;
-    padding: 10px 21px;
+    font-size: 14px;
+    padding: 2px 13px;
   }
 
   .introduce-content-button-left {
-    font-size: 20px;
-
+    font-size: 14px;
     margin-right: 5px;
-    padding: 11px 18px;
+    padding: 4px 14px;
   }
 }
 
 @media only screen and (max-width: 769px) {
+  .introduce-container {
+    max-width: 600px;
+    margin: auto;
+  }
   .introduce-content {
     position: relative;
     display: block;
-    padding: 0 16px;
-    padding-top: 20px;
-    padding-top: 0;
+    padding-top: 462px;
   }
   .introduce-content-title1 {
-    font-size: 60px;
-    line-height: normal;
-    text-align: center;
-  }
-  .introduce-content-title2 {
-    padding-top: 280px;
-
     font-size: 30px;
     line-height: normal;
     text-align: center;
   }
-  .introduce-content-paragraph {
-    padding-top: 186px;
+  .introduce-content-title2 {
+    font-size: 40px;
+    line-height: normal;
     text-align: center;
-    font-size: 35px;
+  }
+  .introduce-content-paragraph {
+    text-align: center;
+    font-size: 24px;
     max-width: 716px;
     margin: auto;
+    padding: 32px;
   }
 
   .itro-home-button {
     display: flex;
     justify-content: space-around;
+    padding-top: 30px;
   }
   .introduce-content-button-left {
     margin: 0;
@@ -206,31 +289,32 @@
 
   .introduce-content-button-right,
   .introduce-content-button-left {
-    font-size: 25px;
-    padding: 12px;
+    font-size: 20px;
+    padding: 10px 24px;
   }
   .itro-home-img {
     position: absolute;
-    top: 84px;
+    top: 40px;
   }
 }
 
 @media only screen and (max-width: 426px) {
+  .introduce-container {
+    max-width: 400px;
+    margin: auto;
+    padding-top: 20px;
+  }
   .introduce-content {
     position: relative;
     display: block;
-    padding: 0 16px;
-    padding-top: 20px;
-    padding-top: 0;
+    padding-top: 335px;
   }
   .introduce-content-title1 {
-    font-size: 30px;
+    font-size: 24px;
     line-height: normal;
     text-align: center;
   }
   .introduce-content-title2 {
-    padding-top: 280px;
-
     font-size: 30px;
     line-height: normal;
     text-align: center;
@@ -238,12 +322,13 @@
   .introduce-content-paragraph {
     padding-top: 16px;
     text-align: center;
-    font-size: 25px;
+    font-size: 24px;
   }
 
   .itro-home-button {
     display: flex;
     justify-content: space-between;
+    padding: 0;
   }
   .introduce-content-button-left {
     margin: 0;
@@ -260,7 +345,7 @@
 }
 
 @media only screen and (max-width: 415px) {
-  .introduce-content {
+  /* .introduce-content {
     position: relative;
     display: block;
     padding: 0;
@@ -300,5 +385,5 @@
   .itro-home-img {
     position: absolute;
     top: 66px;
-  }
+  } */
 }
